--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ anyjson==0.3.3
 argon2-cffi==16.3.0
 astor==0.8.1
 astroid==2.2.5
+attrs==22.1.0
 audioread==2.1.8
 backcall==0.1.0
 bandmat==0.7
@@ -44,9 +45,11 @@ gunicorn==19.7.1
 h11==0.12.0
 html5lib==0.9999999
 httplib2==0.10.3
+httptools==0.1.2
 idna==2.6
 importlib-metadata==4.5.0
 inflect==2.1.0
+iniconfig==1.1.1
 ipython==7.6.1
 ipython-genutils==0.2.0
 isort==4.3.21
@@ -71,15 +74,18 @@ nnmnkwii==0.0.19
 numba==0.44.1
 numpy==1.16.4
 opencv-python==4.1.0.25
+packaging==21.3
 parso==0.5.1
 pdf2image==1.9.0
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.1.0
 pkg-resources==0.0.0
+pluggy==1.0.0
 prompt-toolkit==2.0.9
 protobuf==3.10.0
 ptyprocess==0.6.0
+py==1.11.0
 pycparser==2.19
 pydantic==1.8.1
 pydub==0.24.1
@@ -89,7 +95,9 @@ pyparsing==2.4.2
 PyPDF2==1.26.0
 pysptk==0.1.17
 pytesseract==0.2.7
+pytest==7.0.1
 python-dateutil==2.8.0
+python-dotenv==0.20.0
 python-Levenshtein==0.12.0
 python-multipart==0.0.5
 pytz==2019.1
@@ -108,6 +116,7 @@ tensorboard==1.8.0
 tensorboardX==1.9
 tensorflow==1.8.0
 termcolor==1.1.0
+tomli==1.2.3
 torch==1.5.0
 torchvision==0.1.8
 tqdm==4.36.1
@@ -117,8 +126,10 @@ typing-extensions==3.7.4.3
 Unidecode==1.1.1
 urllib3==1.22
 uvicorn==0.13.4
+uvloop==0.14.0
 vine==1.1.4
 wcwidth==0.1.7
+websockets==8.1
 Werkzeug==0.14.1
 wrapt==1.11.2
 xmltodict==0.11.0
